# usb-rfid-reader

./: Cargo.toml  README.md  flash.sh
.cargo/: config
src/: keyboard.rs  main.rs
